--- a/app/src/main/res/layout/activity_ler_do_usuario.xml
+++ b/app/src/main/res/layout/activity_ler_do_usuario.xml
@@ -57,7 +57,7 @@
         android:layout_marginTop="16dp"
         android:ems="12"
         android:hint="Digite o ano de nascimento"
-        android:inputType="text"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
