--- a/app/src/main/res/layout/activity_consumir_apiactivity.xml
+++ b/app/src/main/res/layout/activity_consumir_apiactivity.xml
@@ -7,6 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".ConsumirAPIActivity">
 
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@+id/textTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Título da Foto"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:paddingBottom="10dp" />
+
+        <ImageView
+            android:id="@+id/imagePhoto"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"/>
+    </LinearLayout>
+
     <Button
         android:id="@+id/button5"
         android:layout_width="wrap_content"
