--- a/app/src/main/res/layout/activity_constraint_layout.xml
+++ b/app/src/main/res/layout/activity_constraint_layout.xml
@@ -20,6 +20,7 @@
         android:id="@+id/button14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:text="Button"
         app:layout_constraintStart_toEndOf="@+id/textView"
         tools:layout_editor_absoluteY="433dp" />
@@ -31,6 +32,16 @@
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/button14"
         app:layout_constraintTop_toBottomOf="@+id/button14" />
+
+    <Button
+        android:id="@+id/button16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
